# TaskPlanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
taskplanner/: __init__.py  __main__.py  core.py  gui.py  main.py
tests/: __init__.py  test_taskplanner.py
